# guiguitsu

./: .guiguitsu.json  CLAUDE.md  Cargo.toml  LICENSE  TODO  build.rs
docs/: jjapi.md  slint-coder.agent.md
scripts/: deploy-linux.sh
src/: cli.rs  config.rs  git_utils.rs  graph.rs  gui.rs  jujutsu.rs  lib.rs  main.rs  models.rs  repo.rs  stacks.rs
tests/: sample1
tests/repos/: repo1.sh  repo_init.sh  repo_init_with_merge.sh  test_bookmarks.sh  test_descendants.sh  test_gitutils.sh  test_new.sh
tests/samples/: crossing.json  diamond.json  fork.json  linear.json  long_fork.json  merge.json  orphan_only.json  single.json  two_roots.json  wide.json
ui/: app.slint  drag_state.slint  types.slint
ui/components/: bottom_bar.slint  commit_card.slint  detail_panel.slint  diff_viewer.slint  graph_row.slint  log_view.slint  stacks_view.slint
